force-app/main/default/objects/ApprovalInstanceHistory__c/ApprovalInstanceHistory__c.object-meta.xml
<CustomObject>
    <label>AP_ApprovalInstanceHistoryItem</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ApprovalInstanceHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP_ApprovalInstanceHistoryItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>