force-app/main/default/objects/ApprovalInstanceHistory__c/fields/Approval_Process_Instance__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Instance</label>
    <referenceTo>ApprovalProcessInstance__c</referenceTo>
    <relationshipLabel>AP_ApprovalInstanceHistoryItems</relationshipLabel>
    <relationshipName>AP_ApprovalInstanceHistoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>