force-app/main/default/objects/ApprovalInstanceHistory__c/fields/ApprovalProcessStepTaskId__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessStepTaskId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApprovalProcessStepTaskId</label>
    <referenceTo>Approval_Process_Step_Task__c</referenceTo>
    <relationshipLabel>AP_ApprovalInstanceHistoryItems</relationshipLabel>
    <relationshipName>AP_ApprovalInstanceHistoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>