force-app/main/default/objects/ApprovalInstanceHistory__c/fields/Original_User__c.field-meta.xml
<CustomField>
    <fullName>Original_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AP_ApprovalInstanceHistoryItems (Original User)</relationshipLabel>
    <relationshipName>AP_ApprovalInstanceHistoryItems1</relationshipName>
    <type>Lookup</type>
</CustomField>