force-app/main/default/objects/ApprovalInstanceHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Process_Instance__c</columns>
    <columns>ApprovalProcessStepInstance__c</columns>
    <columns>ApprovalProcessStepTaskId__c</columns>
    <columns>ApprovalCandidateRecordId__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>